--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ seaborn>=0.11.0
 optuna>=3.0.0
 plotly>=5.0.0     
 kaleido>=0.2.1    
+
+"""
+if there is problem with downloading optuna or kaleido just remove the specific version you are 
+looking for and just add optuna or kaleido pip will automatically find the latest verison available
+"""
